--- a/Views/Common/Attachment_Edit.cshtml
+++ b/Views/Common/Attachment_Edit.cshtml
@@ -9,7 +9,7 @@
     <link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
     <script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script>
     <link href="~/Content/bootstrap32/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/js/jquery-1.8.2.min.js"></script>
+    @*<script src="~/js/jquery-1.8.2.min.js"></script>*@
     <link href="~/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <script src="~/js/upload/plupload.full.min.js"></script>
     <style type="text/css">
@@ -27,24 +27,21 @@
     </style>
     <script type="text/javascript">
         var file_store;
-        Ext.onReady(function () {
-            var FWONO = $("#FWONO").val();
-            var FOONO = $("#FOONO").val();
-            var ORDERCODE = $("#ORDERCODE").val();
+        Ext.onReady(function () { 
             file_store = Ext.create('Ext.data.JsonStore', {
-                fields: ['ID', 'FILENAME', 'FILEPATH', 'CREATETIME', 'FILESIZE','CREATENAME','ORDERCODE'],
+                fields: ['ID', 'FILENAME', 'FILEPATH', 'CREATETIME', 'FILESIZE', 'CREATENAME', 'ORDERCODE'],
                 proxy: {
                     type: 'ajax',
-                    url: '/Common/load_file?FWONO=' + FWONO + '&FOONO=' + FOONO + '&ORDERCODE=' + ORDERCODE,
+                    url: '/Common/load_file?FWONO=' + Ext.get('FWONO').getValue() + '&FOONO=' + Ext.get('FOONO').getValue() + '&ORDERCODE=' + Ext.get('ORDERCODE').getValue(),
                     reader: {
                         root: 'rows',
                         type: 'json'
                     }
                 },
-                autoLoad: true 
+                autoLoad: true
             })
             var tmp = new Ext.XTemplate(
-                 '<tpl for=".">',
+                '<tpl for=".">',
                 '<div class="panel panel-default thumb-wrap fl" style="margin-top:5px;margin-left:5px;width:240px">',
                 '<div class="panel-heading" style="padding-left:5px;padding-right:5px">{[values.FILENAME.substr(0,23)]}<div style="float:right"><span class="glyphicon glyphicon-paperclip"></span></div></div>',
                 '<div class="panel-body" style="padding-left:5px;">{FILETYPENAME}|',
@@ -70,14 +67,11 @@
             upload_ini();
         })
 
-        function upload_ini() {
-            var FWONO = $("#FWONO").val();
-            var FOONO = $("#FOONO").val();
-            var ORDERCODE = $("#ORDERCODE").val();          
+        function upload_ini() {           
             uploader = new plupload.Uploader({
                 runtimes: 'html5,flash,silverlight,html4',
                 browse_button: 'pickfiles', // you can pass an id...
-                url: '/Common/UploadFile?FWONO=' + FWONO + "&FOONO=" + FOONO + "&ORDERCODE=" + ORDERCODE,
+                url: '/Common/UploadFile?FWONO=' + Ext.get('FWONO') + "&FOONO=" + Ext.get('FOONO') + "&ORDERCODE=" + Ext.get('ORDERCODE'),
                 flash_swf_url: '/js/upload/Moxie.swf',
                 silverlight_xap_url: '/js/upload/Moxie.xap',
                 unique_names: true,
@@ -98,7 +92,7 @@
                 file_store.load();
 
             });
-            uploader.bind('Error', function (up, file) { 
+            uploader.bind('Error', function (up, file) {
                 if (file.message == "File size error.") {
                     Ext.MessageBox.alert("错误", "文件太大，无法上传！");
                 }
@@ -123,15 +117,19 @@
                             ids += recs[i].get("ID") + ",";
                         }
                     }
-                    $.ajax({
-                        url: '/Common/delete_file',// 跳转到 action
-                        data: {
-                            'ids': ids
-                        },
-                        type: 'post',
-                        dataType: 'json',
-                        success: function (data) {
-                            file_store.load();
+                    Ext.Ajax.request({
+                        url: "/Common/delete_file",
+                        params: { ids: ids },
+                        success: function (response, opts) {
+                            var result = Ext.decode(response.responseText); 
+                            if (result.success) {
+                                Ext.Msg.alert("提示", "删除成功!", function () {
+                                    file_store.load();
+                                })
+                            }
+                            else {
+                                Ext.Msg.alert("提示", "删除失败!");
+                            }
                         }
                     });
                 }
@@ -158,7 +156,7 @@
                     html: "<div id='fileViewDiv' style='height: 100%;width: 100%;'></div>"
                 }]
             });
-            win.show(); 
+            win.show();
             document.getElementById('fileViewDiv').innerHTML = '<embed id="pdf" width="100%" height="100%" src="http://172.20.70.19:8011\/' + recs[0].get("FILEPATH") + '"></embed>';
         }
     </script>
@@ -171,7 +169,7 @@
         {
             <div class="input-group" style="width:100%;margin:10px 0px">
                 <span class="input-group-addon" style="width:120px">FWO订单号</span>
-                <input type="text" class="form-control"  value="@ViewData["FWONO"]" id="FWONO" readonly="readonly">
+                <input type="text" class="form-control" value="@ViewData["FWONO"]" id="FWONO" readonly="readonly">
             </div>
             <div class="input-group" style="width: 100%; margin: 10px 0px">
                 <span class="input-group-addon" style="width:120px">FOO指令服务号</span>
