update attachmen list

--- a/Views/Common/Attachment_List.cshtml
+++ b/Views/Common/Attachment_List.cshtml
@@ -62,7 +62,7 @@
                     <th data-options="field:'FOONO',width:200,sortable:true">FOO指令服务号</th>
                     <th data-options="field:'ORDERCODE',width:150,sortable:true">业务单号</th>
                     <th data-options="field:'FILENAME',width:390,sortable:true">文件名称</th>
-                    <th data-options="field:'CREATENAME',width:50,sortable:true">上传人</th>
+                    <th data-options="field:'REALNAME',width:60,sortable:true">上传人</th>
                     <th data-options="field:'CREATETIME',width:140,sortable:true">上传时间</th>
                 </tr>
             </thead>
