--- a/Views/Common/SyncFoo_List.cshtml
+++ b/Views/Common/SyncFoo_List.cshtml
@@ -103,6 +103,8 @@
                     <th data-options="field:'FWONO',width:200,sortable:true">FWO号</th>
                     <th data-options="field:'FOONO',width:200,sortable:true">FOO指令号</th>
                     <th data-options="field:'TIME',width:150,sortable:true">发送时间</th>
+                    <th data-options="field:'SENDURL',width:80">发送地址</th>
+
                     <th data-options="field:'CODE',width:150,sortable:true">订单号</th>
                     <th data-options="field:'BUSITYPE',width:150,sortable:true">业务类型</th>
                     <th data-options="field:'CUSNO',width:120,sortable:true">客户编号</th>
@@ -148,6 +150,12 @@
                     <th data-options="field:'ISPREDECLARE',width:80,sortable:true">是否提前报关</th>
                     <th data-options="field:'INVOICENO',width:100,sortable:true">二线合同专用发票号</th>
                     <th data-options="field:'ISCHECKEDWEIGHT',width:100,sortable:true">重量确认标志</th>
+
+                    <th data-options="field:'TONGGUANFSCODE',width:100,sortable:true">通关方式CODE</th>
+                    <th data-options="field:'TONGGUANFSNAME',width:80,sortable:true">通关方式NAME</th>
+                    <th data-options="field:'CGGROUPCODE',width:100,sortable:true">采购组织CODE</th>
+                    <th data-options="field:'CGGROUPNAME',width:100,sortable:true">采购组织NAME</th>
+
                 </tr>
             </thead>
         </table>
