--- a/Views/Common/SyncMsg_List.cshtml
+++ b/Views/Common/SyncMsg_List.cshtml
@@ -9,7 +9,8 @@
     var businessin_source = [
         { name: 'SAP->新关务' },
         { name: '新关务->SAP' },
-        { name: '新关务->单证云' }
+        { name: '新关务->单证云' },
+        { name: '物贸通->新关务' },
     ];
     // 查询条件  --状态
     var businessin_status = [
