--- a/Views/Wumao/Wumao_List.cshtml
+++ b/Views/Wumao/Wumao_List.cshtml
@@ -95,6 +95,7 @@
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'ORDERCODE',width:150">业务编号</th>
+                    <th data-options="field:'STATUS',width:100">状态</th>
                     <th data-options="field:'BUSINAME',width:150">业务类型</th>
                     <th data-options="field:'GOODS_NATURE_ID',width:150">料件性质</th>
                     <th data-options="field:'PROVIDER_NAME',width:150">货物名称</th>
