--- a/Views/Common/Attachment_Edit.cshtml
+++ b/Views/Common/Attachment_Edit.cshtml
@@ -8,7 +8,7 @@
     <title>随附文件</title>
     <link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
     <script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script>
-    <link href="~/Content/bootstrap32/css/bootstrap.min.css" rel="stylesheet" /> 
+    <link href="~/Content/bootstrap32/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <script src="~/js/upload/plupload.full.min.js"></script>
     <style type="text/css">
@@ -26,12 +26,12 @@
     </style>
     <script type="text/javascript">
         var file_store;
-        Ext.onReady(function () { 
+        Ext.onReady(function () {
             file_store = Ext.create('Ext.data.JsonStore', {
                 fields: ['ID', 'FILENAME', 'FILEPATH', 'CREATETIME', 'FILESIZE', 'CREATENAME', 'ORDERCODE'],
                 proxy: {
                     type: 'ajax',
-                    url: '/Common/load_file?FWONO=' + Ext.get('FWONO').getValue() + '&FOONO=' + Ext.get('FOONO').getValue() + '&ORDERCODE=' + Ext.get('ORDERCODE').getValue(),
+                    url: '/Common/load_file?FWONO=' + Ext.get('FWONO').getValue() + '&FOONO=' + Ext.get('FOONO').getValue() + '&ORDERCODE=' + Ext.get('ORDERCODE').getValue() + "&id=" + Ext.get('fileid').getValue(),
                     reader: {
                         root: 'rows',
                         type: 'json'
@@ -66,7 +66,7 @@
             upload_ini();
         })
 
-        function upload_ini() {           
+        function upload_ini() {
             uploader = new plupload.Uploader({
                 runtimes: 'html5,flash,silverlight,html4',
                 browse_button: 'pickfiles', // you can pass an id...
@@ -120,7 +120,7 @@
                         url: "/Common/delete_file",
                         params: { ids: ids },
                         success: function (response, opts) {
-                            var result = Ext.decode(response.responseText); 
+                            var result = Ext.decode(response.responseText);
                             if (result.success) {
                                 Ext.Msg.alert("提示", "删除成功!", function () {
                                     file_store.load();
@@ -158,38 +158,62 @@
             win.show();
             document.getElementById('fileViewDiv').innerHTML = '<embed id="pdf" width="100%" height="100%" src="http://172.20.70.19:8011\/' + recs[0].get("FILEPATH") + '"></embed>';
         }
+        function update_file() {
+            var w_fileview = Ext.getCmp("w_fileview");
+            var recs = w_fileview.getSelectionModel().getSelection();
+            if (recs.length < 1) {
+                Ext.MessageBox.alert("提示框", "请选择文件！");
+                return false;
+            }
+            Ext.Ajax.request({
+                url: "/Common/update_file",
+                params: { id: recs[0].get("ID"), ordercode: Ext.get('ORDERCODE').getValue() },
+                success: function (response, opts) {
+                    var result = Ext.decode(response.responseText);
+                    if (result.success) {
+                        Ext.Msg.alert("提示", "保存成功!", function () {
+                            file_store.load();
+                        })
+                    }
+                    else {
+                        Ext.Msg.alert("提示", "保存失败!");
+                    }
+                }
+            });
+        }
     </script>
 </head>
 <body>
     <div class="container" style="width:540px">
         <input type="hidden" value="@ViewData["Path"]" id="Path">
-
-        @if (ViewData["is_passed"] == "1")
-        {
-            <div class="input-group" style="width:100%;margin:10px 0px">
-                <span class="input-group-addon" style="width:120px">FWO订单号</span>
-                <input type="text" class="form-control" value="@ViewData["FWONO"]" id="FWONO" readonly="readonly">
-            </div>
-            <div class="input-group" style="width: 100%; margin: 10px 0px">
-                <span class="input-group-addon" style="width:120px">FOO指令服务号</span>
-                <input type="text" class="form-control" value="@ViewData["FOONO"]" id="FOONO" readonly="readonly">
-            </div>
-            <div class="input-group" style="width: 100%; margin: 10px 0px">
-                <span class="input-group-addon" style="width:120px">业务单号</span>
-                <input type="text" class="form-control" value="@ViewData["ORDERCODE"]" id="ORDERCODE" readonly="readonly">
-            </div>
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-primary btn-sm" id="pickfiles"><i class="fa fa-upload"></i>&nbsp;上传文件</button>
-                <button type="button" class="btn btn-primary btn-sm" onclick="open_file()"><i class="fa fa-exchange fa-fw"></i>&nbsp;浏览文件</button>
-                <button type="button" class="btn btn-primary btn-sm" onclick="deletefile()"><i class="fa fa-trash-o"></i>&nbsp;删除文件</button>
-            </div>
-            <div id="div_panel">
-            </div>
-        }
-        else
-        {
-            <h1>参数异常</h1>
-        }
+        <input type="hidden" value="@ViewData["ID"]" id="fileid" />
+        @*@if (ViewData["is_passed"] == "1")
+            {*@
+        <div class="input-group" style="width:100%;margin:10px 0px">
+            <span class="input-group-addon" style="width:120px">FWO订单号</span>
+            <input type="text" class="form-control" value="@ViewData["FWONO"]" id="FWONO" readonly="readonly">
+        </div>
+        <div class="input-group" style="width: 100%; margin: 10px 0px">
+            <span class="input-group-addon" style="width:120px">FOO指令服务号</span>
+            <input type="text" class="form-control" value="@ViewData["FOONO"]" id="FOONO" readonly="readonly">
+        </div>
+        <div class="input-group" style="width: 100%; margin: 10px 0px">
+            <span class="input-group-addon" style="width:120px">业务单号</span>
+            <input type="text" class="form-control" value="@ViewData["ORDERCODE"]" id="ORDERCODE">
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-primary btn-sm" onclick="update_file()"><i class="fa fa-save"></i>&nbsp;保存</button>
+            <button type="button" class="btn btn-primary btn-sm" id="pickfiles"><i class="fa fa-upload"></i>&nbsp;上传文件</button>
+            <button type="button" class="btn btn-primary btn-sm" onclick="open_file()"><i class="fa fa-exchange fa-fw"></i>&nbsp;浏览文件</button>
+            <button type="button" class="btn btn-primary btn-sm" onclick="deletefile()"><i class="fa fa-trash-o"></i>&nbsp;删除文件</button>
+        </div>
+        <div id="div_panel">
+        </div>
+        @*}
+            else
+            {
+                <h1>参数异常</h1>
+            }*@
     </div>
 </body>
 </html>
