--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -50,7 +50,7 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'CODE',width:100,sortable:true,">业务单号</th>
                     <th data-options="field:'CREATETIME',width:130,sortable:true,">TM下发时间</th>
-                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,">收货人</th>
+                    <th data-options="field:'FGOODSUNIT',width:200,sortable:true,">收货人</th>
                     <th data-options="field:'CLEARANCENO',width:100">通关单号</th>
                     <th data-options="field:'INSPECTIONCODE',width:150,sortable:true">报检单号</th>
                     <th data-options="field:'INSPECTIONSTATUS',width:150,sortable:true">国检状态</th>
