update attachmen list

--- a/Views/Common/Attachment_List.cshtml
+++ b/Views/Common/Attachment_List.cshtml
@@ -84,7 +84,8 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" editable="false" id="businessin_createname" panelheight="auto" name="businessin_createname"></select>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="businessin_createname" placeholder="上传人" />
+                                @*<select class="easyui-combobox combobox_width value" editable="false" id="businessin_createname" panelheight="auto" name="businessin_createname"></select>*@
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
