--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -17,18 +17,19 @@
     ];
     //2 查询条件  --单据号
     var search_code = [
-        { code: 'CODE', name: '业务编号',selected: true  },
+        { code: 'CODE', name: '业务编号', selected: true },
+        { code: 'FWONO', name: 'FWO订单号' },
+        { code: 'FOONO', name: 'FO号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
         { code: 'DIVIDENO', name: '分单号', },
         { code: 'TOTALNO', name: '总单号' },
-        { code: 'text', name: '万达号' },
-        { code: 'CONTAINERNO', name: '集装箱号' },
+        //{ code: 'text', name: '万达号' },
+        //{ code: 'CONTAINERNO', name: '集装箱号' },
         { code: 'TURNPRENO', name: '转关预录入号' },
         { code: 'FIRSTLADINGBILLNO', name: '一程提运单号' },
         { code: 'SECONDLADINGBILLNO', name: '二程提运单号' },
-        { code: 'MANIFEST', name: '载货清单号' },
-        { code: 'DECLARATIONCODE', name: '报关单号' },
-        { code: 'FWONO', name: 'FWO订单号' },
-        { code: 'FOONO', name: 'FO号' }
+        { code: 'MANIFEST', name: '载货清单号' }
+
     ];
     $(function () {
         loadListGrid('Declare/OnelineIn_Edit');
@@ -42,9 +43,9 @@
             valueField: 'code',
             textField: 'name'
         });
-                  
+
     })
-</script> 
+</script>
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="一线进口" style="height:auto;min-height:500px;max-height:800px"
@@ -108,7 +109,7 @@
                             </td>
 
                             <td class="search_margin">
-                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname" ></select>
+                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
                             </td>
                             <td>
                                 <input class="easyui-textbox value placeholderclass" type="text" name="oprname_value" placeholder="操作人" />
