--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -17,15 +17,16 @@
         { code: 'CODE', name: '业务编号', selected: true },
         { code: 'FWONO', name: 'FWO订单号' },
         { code: 'FOONOBJ', name: 'FO号' },
+        { code: 'INSPECTIONCODE', name: '报检单号' },
         { code: 'DIVIDENO', name: '分单号' },
         { code: 'TOTALNO', name: '总单号' },
-        { code: 'text', name: '万达号' },
+        //{ code: 'text', name: '万达号' },
         { code: 'MANIFEST', name: '载货清单号' },
         { code: 'INSPECTIONCODE', name: '报检单号' },
         { code: 'FIRSTLADINGBILLNO', name: '一程提运单号' },
         { code: 'SECONDLADINGBILLNO', name: '二程提运单号' },
-        { code: 'CLEARANCENO', name: '通关单号' },
-        { code: 'CONTAINERNO', name: '集装箱号' }
+        { code: 'CLEARANCENO', name: '通关单号' }
+        //{ code: 'CONTAINERNO', name: '集装箱号' }
     ];
     $(function () {
         loadListGrid('Inspect/OnelineIn_Edit');
