--- a/Views/Wumao/Wumao_List.cshtml
+++ b/Views/Wumao/Wumao_List.cshtml
@@ -131,9 +131,9 @@
                     <th data-options="field:'ISHDZ',width:150">是否华东转</th>
                     <th data-options="field:'TRADETYPE',width:150">监管方式</th>
                     <th data-options="field:'OUT_GOODS_TYPE_LY',width:150">区外转关方式</th>
-                    <th data-options="field:'LY_BIZ_TYPE_ID',width:150">陆运业务类型代码</th>
-                    <th data-options="field:'GOODS_TYPE_ID',width:150">陆运货物类别代码</th>
-                    <th data-options="field:'LYTYPE_ID',width:150">陆运ID</th>
+                    <th data-options="field:'LY_BIZ_TYPE_ID',width:150">LY_BIZ_TYPE_ID</th>
+                    <th data-options="field:'GOODS_TYPE_ID',width:150">GOODS_TYPE_ID</th>
+                    <th data-options="field:'LYTYPE_ID',width:150">LYTYPE_ID</th>
                     <th data-options="field:'AREA_CODE',width:150">卸货地代码</th>
                     <th data-options="field:'MEANSOFTRANSPORTNAME',width:150">运输工具名称</th>
                     <th data-options="field:'MEANSOFTRANSPORTID',width:150">运输工具航次</th>
