--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -19,12 +19,13 @@
     //2 查询条件  --单据号
     var search_code = [
         { code: 'CODE', name: '业务编号', selected: true },
-        { code: 'TURNPRENO', name: '转关预录入号' },
-        { code: 'text', name: '万达号' },
-        { code: 'ARRIVEDNO', name: '运抵编号' },
-        { code: 'DECLARATIONCODE', name: '报关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
         { code: 'FOONO', name: 'FO号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
+        { code: 'TURNPRENO', name: '转关预录入号' },
+        //{ code: 'text', name: '万达号' },
+        { code: 'ARRIVEDNO', name: '运抵编号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
         { code: 'ARRIVEDNO', name: '运抵编号' }
     ];
     $(function () {
