--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -16,11 +16,12 @@
     ];
     //2 查询条件  --单据号
     var search_code = [
-        { code: 'DECLARATIONCODE', name: '报关单号', selected: true },
-        { code: 'CONTAINERNO', name: '集装箱号' },
-        { code: 'TURNPRENO', name: '转关单号' },
+        { code: 'CODE', name: '业务编号', selected: true },
         { code: 'FWONO', name: 'FWO订单号' },
         { code: 'FOONO', name: 'FO号' },
+        { code: 'DECLARATIONCODE', name: '报关单号' },
+        //{ code: 'CONTAINERNO', name: '集装箱号' },
+        { code: 'TURNPRENO', name: '转关单号' },
         { code: 'ARRIVEDNO', name: '运抵编号' },
     ];
     $(function () {
